fix scrollbar bug

--- a/src/components/dropdown/style.styl
+++ b/src/components/dropdown/style.styl
@@ -8,9 +8,6 @@
     position: relative
     z-index: 1
 
-    div[class=dropdown-backdrop]
-        display: none
-
     div[class=dropdown-menu]
         border: 0
         border-radius: 0 0 5px 5px
@@ -31,10 +28,16 @@
         transition: transform 0.4s cubic-bezier(0.42, 0, 0, 1.4)
         vertical-align: top
         width: 100%
-        z-index: 1
+        z-index: 0
+
+        .items
+            display: block
+            position: relative
+            z-index: -999
 
         &::-webkit-scrollbar-track
-            background-color: transparent
+            background-color: rgba(0,0,0,0.20)
+            margin: 0
 
     div[class=dropdown-toggle]
         align-items: center
@@ -94,13 +97,16 @@
 // Item
 
 .item
+    background-clip: border-box
+    border-radius: 3px
     cursor: pointer
     opacity: 0.75
-    padding: 8px 0px 8px 10px
+    padding: 8px 0 8px 10px
+    margin: 0 10px 0 5px
     transition: all 0.2s ease
     &:hover
-        background: #EEE
-        opacity: 1
+        background-color: #EEE
+        opacity: 0.99
 
 .action
     composes: item
